test_suite5/ALAN/test_suite/alan-2022-examples/failing/005030_mutation.alan
source tc begin leave d and or BZ50 end
